--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
+        media="screen">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -37,7 +38,7 @@
 <!-- body -->
 
 <body class="main-layout ">
-    
+
     <header>
         <!-- header inner -->
         <div class="header">
@@ -48,7 +49,9 @@
                         <div class="full">
                             <div class="center-desk">
                                 <div class="logo">
-                                    <a href="/index"><h2>DONATIONS APP<h2></a>
+                                    <a href="/index">
+                                        <h2>DONATIONS APP<h2>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -77,7 +80,7 @@
         </div>
         <!-- end header inner -->
     </header>
-    
+
     <!-- about -->
     <div class="about">
         <div class="container">
@@ -91,13 +94,15 @@
                     <div class="about_box">
                         <h3>About Us</h3>
                         <span>Our Donations App</span>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ducimus inventore id laboriosam atque necessitatibus voluptates natus error nemo, libero a corporis aut porro quae? Odio aperiam debitis quas consequatur!</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem ducimus inventore id
+                            laboriosam atque necessitatibus voluptates natus error nemo, libero a corporis aut porro
+                            quae? Odio aperiam debitis quas consequatur!</p>
 
                     </div>
-               
+
+                </div>
             </div>
         </div>
-    </div>
     </div>
     <!-- end about -->
 
@@ -117,25 +122,29 @@
                 <div class="row">
 
                     <% result.forEach(function(item) { %>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
-                        <div class="brand_box">
-                            <img src="images/ <%= item.image %>" alt="img" />
-                            <span><%= item.name %></span>
-                            <span>Category: <%= item.category %></span>
+                        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 margin">
+                            <div class="brand_box">
+                                <img src="images/ <%= item.image %>" alt="img" />
+                                <span>
+                                    <%= item.name %>
+                                </span>
+                                <span>Category: <%= item.category %></span>
+                                <span>Quantity: <%= item.quantity %></span>
 
-                            <form action="/add_to_cart" method="post">
-                                <input type="hidden" name="id" value="<%= item.id %>">
-                                <input type="hidden" name="name" value="<%= item.name %>">
-                                <input type="hidden" name="category" value="<%= item.category %>">
-                                <input type="hidden" name="image" value="<%= item.image %>">
-                                <input type="submit" value="Add to cart" class="btn btn-primary">
-                            </form>
+                                <form action="/add_to_cart" method="post">
+                                    <input type="hidden" name="id" value="<%= item.id %>">
+                                    <input type="hidden" name="name" value="<%= item.name %>">
+                                    <input type="hidden" name="category" value="<%= item.category %>">
+                                    <input type="hidden" name="image" value="<%= item.image %>">
+                                    <input type="hidden" name="quantity" value="<%= item.quantity %>">
+                                    <input type="submit" value="Add to cart" class="btn btn-primary">
+                                </form>
+                            </div>
                         </div>
-                    </div>
-                    <% }) %>
-                    <div class="col-md-12">
-                        <a class="read-more">See More</a>
-                    </div>
+                        <% }) %>
+                            <div class="col-md-12">
+                                <a class="read-more">See More</a>
+                            </div>
                 </div>
             </div>
         </div>
@@ -185,15 +194,16 @@
                                 <h3>Address</h3>
                                 <span>San Jose State University</span>
                                 <p>1111111111
-                                    <br>team11@gmail.com</p>
+                                    <br>team11@gmail.com
+                                </p>
                             </div>
-                            
+
                             <div class="menu-bottom">
                                 <ul class="link">
                                     <li> <a href="#">Home</a></li>
                                     <li> <a href="#">About</a></li>
                                     <li> <a href="#">Brand </a></li>
-                                    <li> <a href="#">Specials  </a></li>
+                                    <li> <a href="#">Specials </a></li>
                                     <li> <a href="#"> Contact us</a></li>
                                 </ul>
                             </div>
@@ -217,16 +227,16 @@
     <script src="js/owl.carousel.js"></script>
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $(".fancybox").fancybox({
                 openEffect: "none",
                 closeEffect: "none"
             });
 
-            $(".zoom").hover(function() {
+            $(".zoom").hover(function () {
 
                 $(this).addClass('transition');
-            }, function() {
+            }, function () {
 
                 $(this).removeClass('transition');
             });
